# CAHMML

./: .gitignore  LICENSE.txt  README.html  README.md  hmm.py  pyproject.toml
cahmml/: __init__.py  hmm.py  hmm_util.py  util.py
cahmml/hmm/: hmm.py
cahmml/test/: test_hmm.py  test_small.py
src/: hmm.py  pyproject.toml
test/: test_small.py
