[tool.poetry]
name = "cahmml"
version = "0.1.0"
description = "Custom Lambda HMM Library"
authors = ["Ryan Eveloff, Denghui Chen"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
